--- a/remote/readme
+++ b/remote/readme
@@ -1,1 +1,3 @@
-Files on the remote go here
+sshd_config should be places in /etc/ssh/
+oci.conf and slurm.conf should be places in /usr/local/etc/.
+
